@@ -3,3 +3,4 @@
 ( cvs diff -u -r 1.1.2.1 -r 1.1.2.2 src/spam_report.c;  ) > 0.1.1cvs3.patchset
 ( cvs diff -u -r 1.1.2.2 -r 1.1.2.3 configure.ac;  ) > 0.1.1cvs4.patchset
 ( cvs diff -u -r 1.1.2.1 -r 1.1.2.2 src/spam_report_prefs.c;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 src/spam_report.c;  ) > 0.1.1cvs5.patchset
+( cvs diff -u -r 1.1.2.3 -r 1.1.2.4 src/spam_report.c;  ) > 0.1.1cvs6.patchset
